<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/share_qq"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/qq"
            android:onClick="click" />
        <TextView
            android:layout_width="160dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_alignBottom="@+id/share_line"
            android:text="@string/QQ"/>

        <Button
            android:id="@+id/share_weixin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/weixin"
            android:onClick="click" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/share_line"
            android:text="@string/WeiXin"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"
            android:id="@+id/share_line"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/share_qq"
            android:layout_centerHorizontal="true" />
        <TextView
            android:onClick="click"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/share_cancel"
            android:layout_alignTop="@+id/share_line"
            android:gravity="center"
            android:textSize="8pt"
            android:text="@string/share_cancel"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>