<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_constraintTop_toBottomOf="@+id/button"
    tools:context="easier.com.easier.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:onClick="click"
        android:text="@string/home_btnOne"
        app:layout_constraintBottom_toBottomOf="@+id/btnTwo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/btnThree"
        app:layout_constraintTop_toTopOf="@+id/btnTwo"
        app:layout_constraintVertical_bias="0.76"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="click"
        android:text="@string/home_btnTwo"
        app:layout_constraintLeft_toRightOf="@+id/btnOne"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="178dp"
        android:layout_height="155dp"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:onClick="click"
        android:text="@string/home_btnThree"
        app:layout_constraintBottom_toTopOf="@+id/btnFive"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:onClick="click"
        android:text="@string/home_btnFour"
        app:layout_constraintLeft_toLeftOf="@+id/btnTwo"
        app:layout_constraintRight_toRightOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginTop="155dp"
        android:onClick="click"
        android:text="@string/home_btnFive"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/btnOne"
        app:layout_constraintRight_toRightOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnOne"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:onClick="click"
        android:text="@string/home_btnSix"
        app:layout_constraintLeft_toLeftOf="@+id/btnFour"
        app:layout_constraintRight_toRightOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnFour"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/home_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSix"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/home_RecommendFocus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/home_recommendfocus"
        android:visibility="invisible"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_bottom"
        app:layout_constraintVertical_bias="0.68"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/home_Recommend"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="click"
        android:background="@drawable/home_recommend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_bottom"
        app:layout_constraintVertical_bias="0.68"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/home"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/home"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_bottom"
        app:layout_constraintVertical_bias="0.68"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/home_Focus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/home_focus"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_bottom"
        app:layout_constraintVertical_bias="0.68"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/home_Setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="click"
        android:background="@drawable/home_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_bottom"
        app:layout_constraintVertical_bias="0.68"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/home_SettingFocus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/home_settingfocus"
        android:visibility="invisible"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_bottom"
        app:layout_constraintVertical_bias="0.68"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/home_bottom" />

</android.support.constraint.ConstraintLayout>
